--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -153,6 +153,18 @@ body {
     
 }
 
+.nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 650px;
+    font-size: 16px;
+}
+.nav:hover {
+    font-size: 17px;
+    font-weight: bold;
+}
+
 .luxury {
     display: flex;
     align-items: center;
